--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.datasource.password=Root@1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
 spring.application.name= Employee-CRUD-Service
-server.port=8080
+server.port=9090
 
+#spring.cloud.config.uri:http://localhost:9999/
