--- a/SpringBoot-Application-CRUD/src/main/resources/application.properties
+++ b/SpringBoot-Application-CRUD/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=Root@1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+server.port=8089
